--- a/dist.ini
+++ b/dist.ini
@@ -1,18 +1,15 @@
-version = 0.599
+version = 0.001
 
 name    = Color-HSV-Util
 
 [@Author::PERLANCAR]
-:version=0.594
+:version=0.600
 
 [Prereqs / TestRequires]
-Test::Exception=0
-Test::More=0.98
-Test::RandomResult=0
 
 [Prereqs]
 perl=5.010001
 strict=0
 warnings=0
-Digest::SHA=0
+Color::RGB::Util=0.599
 Exporter=5.57
